[workspace]
members = [
  "driver",
  "syntax",
  "physics",
  "db",
  "index",
  "query",
  "common",
  "tests",
]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"

# this controls cargo test --release
[profile.bench]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true