[package]
name = "db"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
physics = { path = "../physics" }
common = { path = "../common" }
syntax = { path = "../syntax" }
memmap = "0.7.0"
hashbrown = { version = "0.5", features = ["nightly"] }
chrono = "0.4"