[package]
name = "driver"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
syntax = { path = "../syntax" }
db = { path = "../db" }
index = { path = "../index" }
query = { path = "../query" }
rustyline = "*"
colored = "*"
typed-arena = "*"

[[bin]]
name = 'db'
path = 'src/cli.rs'

[[bin]]
name = 'test'
path = 'src/main.rs'