[package]
name = "index"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
physics = { path = "../physics" }
db = { path = "../db" }
syntax = { path = "../syntax" }
chrono = "*"
unchecked_unwrap = "*"

[features]
print-dot = []