[package]
name = "query"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
syntax = { path = "../syntax" }
physics = { path = "../physics" }
db = { path = "../db" }
index = { path = "../index" }
chrono = "0.4"
regex = "1"
hashbrown = { version = "0.5", features = ["nightly"] }
unchecked_unwrap = "1.0.1"