[package]
name = "tests"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
physics = { path = "../physics" }
syntax = { path = "../syntax" }
db = { path = "../db" }
index = { path = "../index" }
query = { path = "../query" }
driver = { path = "../driver" }